setup: update setuptools requirement
So `py_modules` is supported in setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,8 @@ install_requires =
 	pyexcel>=0.4.5
 	pyexcel-ods3>=0.3.2
 	pyexcel-xlsx>=0.3.0
-packages =
-	.
+py_modules =
+	plover_excel_dictionary
 
 [options.entry_points]
 plover.dictionary =
