setup: add `test` extra

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,10 @@ install_requires =
 py_modules =
 	plover_excel_dictionary
 
+[options.extras_require]
+test =
+	pytest
+
 [options.entry_points]
 plover.dictionary =
 	ods  = plover_excel_dictionary:ExcelDictionary
