--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,26 @@
 [tox]
-envlist = py, packaging
+envlist = test
 
 [testenv]
-usedevelop = True
-deps =
-	pytest
+usedevelop = true
+extras =
+	test
 commands =
-	pytest -ra
+	pytest {posargs}
 
 [testenv:packaging]
+skip_install = true
 deps =
+	build
 	check-manifest
-	readme-renderer
+	readme-renderer[md]
+	twine
+allowlist_externals =
+	rm
 commands =
-	check-manifest
-	python setup.py check -m -r -s
+	rm -rf build dist
+	python -m build --sdist --wheel .
+	twine check --strict dist/*
+	check-manifest -v
+
+# vim: commentstring=#\ %s list
