--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plover_excel_dictionary
-version = 0.2.4
+version = 1.0.0.dev0
 description = Excel dictionaries support for Plover
 long_description = file: README.md
 long_description_content_type = text/markdown
