ensure our preferred readers/writers are used

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ keywords = plover plover_plugin
 zip_safe = True
 python_requires = >=3.6
 install_requires =
+	importlib_metadata
 	plover>=4.0.0.dev9
 	pyexcel>=0.4.5
 	pyexcel-ods3>=0.3.2
