switch to `pytest-ods` as our preferred reader/writer
It's better maintained.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ install_requires =
 	importlib_metadata
 	plover>=4.0.0.dev9
 	pyexcel>=0.4.5
-	pyexcel-ods3>=0.3.2
+	pyexcel-ods>=0.6.0
 	pyexcel-xlsx>=0.3.0
 py_modules =
 	plover_excel_dictionary
